# dsad_tech_assignment

./: .gitignore  Dockerfile  Dockerfile.db  Dockerfile.streamlit  README.md  docker-compose.yml  main.py  pyproject.toml
data/: MasterPlan2025PlanningAreaBoundaryNoSea.geojson
notebook/: eda.ipynb  get_data.ipynb  get_token.ipynb
sql/: init.sql
src/: config.py
src/api/: main.py
src/data/: ingest.py  ura_client.py
src/database/: client.py
src/features/: preprocessing.py
src/models/: predictor.py  trainer.py
streamlit_app/: app.py
supabase/.temp/: project-ref
supabase/migrations/: 20260413140000_create_properties_schema.sql
